Dex bytecode repacking and loading

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    compileSdkVersion 16
     buildToolsVersion "25.0.2"
     defaultConfig {
         applicationId "ru.innopolis.app"
@@ -21,6 +21,9 @@ android {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            debuggable true
+        }
     }
     externalNativeBuild {
         cmake {
@@ -29,6 +32,10 @@ android {
     }
     dexOptions {
     }
+    compileOptions {
+        targetCompatibility JavaVersion.VERSION_1_7
+        sourceCompatibility JavaVersion.VERSION_1_7
+    }
 }
 
 dependencies {
@@ -36,8 +43,10 @@ dependencies {
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    //    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile 'com.android.support:design:24.2.1'
-    testCompile 'junit:junit:4.12'
+    //    compile 'com.android.support:design:24.2.1'
+    androidTestCompile 'junit:junit:4.12'
+    compile 'com.jakewharton.android.repackaged:libcore-dex:7.1.0_r7'
+    compile 'com.google.android.tools:dx:1.7'
 }
