--- a/dummy/build.gradle
+++ b/dummy/build.gradle
@@ -1,34 +1,43 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 24
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword '123456'
+            storeFile file('/home/kitsu/dev/Java/android/mykey.jks')
+            storePassword '123456'
+        }
+    }
+    compileSdkVersion 16
     buildToolsVersion "25.0.2"
-
     defaultConfig {
         applicationId "ru.innopolis.dummy"
         minSdkVersion 16
         targetSdkVersion 16
         versionCode 1
         versionName "1.0"
-
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
-
+        signingConfig signingConfigs.config
     }
     buildTypes {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.config
         }
+    }
+    productFlavors {
     }
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile fileTree(include: ['*.jar'], dir: 'libs')
     androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    //    compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.0-beta4'
-    compile 'com.android.support:design:24.2.1'
+    //    compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
 }
